# kipbot

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
kipbot/: __init__.py
kipbot/cli/: commands.py
kipbot/core/: agent.py  config.py
kipbot/llm/: provider.py
kipbot/memory/: store.py
kipbot/tools/: base.py  calculator.py  datetime_tool.py  web_search.py
